fix: change margin and text-align at get card section

--- a/style.scss
+++ b/style.scss
@@ -559,7 +559,6 @@ img {
   .get-card__title {
     text-align: end;
     color: #000;
-    text-align: center;
     font-family: Forum;
     font-size: 30px;
     font-style: normal;
@@ -570,34 +569,33 @@ img {
 
   p {
     text-align: end;
-    width: 356px;
+    width: 456px;
     color: #000;
     text-align: right;
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 40px; /* 200% */
+    line-height: 40px;
     letter-spacing: 0.4px;
   }
 
-  div {
-    button {
-      width: 75px;
-      height: 30px;
-      padding: 10px 0px;
-      background: #fff;
-      border-radius: 2px;
-      border: 1px solid #0c0c0e;
-      color: #0c0c0e;
-      text-align: center;
-      font-family: Inter;
-      font-size: 10px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
-      letter-spacing: 1px;
-    }
+  button {
+    width: 75px;
+    height: 30px;
+    margin-left: 20px;
+    padding: auto;
+    background: #fff;
+    border-radius: 2px;
+    border: 1px solid #0c0c0e;
+    color: #0c0c0e;
+    text-align: center;
+    font-family: Inter;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1px;
   }
 }
 
